--- a/Kotohin/Desktop HTML/Website.css
+++ b/Kotohin/Desktop HTML/Website.css
@@ -2,65 +2,151 @@
   --color-yelowe:#F8F200;
   --color-black :#000000;
   --Color-blu:#52BEDC;
+ 
+  --font-family-base:'Roboto';
 }
 
 
 @font-face {
   font-family: 'Roboto';
-  src: url('../FONTS/Roboto-Regular_1.woff') format('woff');
-  font-weight: normal;
+  src: url('../FONTS/Roboto-Regular_1.woff');
+  font-weight: 400;
   font-style: normal;
+  
 }
 
 
 @font-face {
-  font-family: 'Bebas Neue';
-  src: url('../FONTS/BebasNeue-Regular_1.woff') format('woff');
-  font-weight: normal;
-  font-style: sans-serif;
+  font-family: 'Arial';
+  src: url('../FONTS/arialmt.woff');
+  font-weight: 400;
+  font-style: normal;
 }
 
 body{
+font-family:var(--font-family-base);
+font-family:var(--font-family-base);
 width: 1920px; 
 height: 4334px;
 
 }
 
 header{
-
   display: flex;
-  width:1280px;
+  position: absolute;
+  width: 1280px;
   height: 74px;
-  justify-content:center;
-  align-items: center; 
-  gap: 605px;
-  margin: 20px 320px 906px 320px; 
 }
-.media{
-  padding: 0px;
+
+.header-settings {
   display: flex;
+  gap: 605px;
+  height: 74px;
+  width: 1280px;
+  margin: 20px 320px 0px 320px;
+}
+
+.media{
+  display: flex;
+  padding: 0px;
+  gap: 40px;
   width: 379px; 
   height: 30px;
-  gap: 40px; 
   
 }
 
 .logo{
-  width: 296;
+  display: flex;
+  width: 296px;
   height: 74px; 
   
 }
 
-.group_1{
+.group_1 {
   display: flex;
+  width: 1920px;
+  height: 1000px;
+  background-image: url(../IMAGES/background.png);
+  
+}
+
+.group_banner {
+  display: flex;
+  flex-flow: column;
+  width: 624px;
+  height: 369px;
+  background-color: #F8F200;
+  clip-path: polygon(0% 0%, 100% 0%, 100% 80%, 90% 100%, 0% 100%);
+  margin: 631px 320px 0px 976px; 
+}
+
+.text_logo_banner{
+display: flex;
+width: 484px;
+height: 126px;
+font-size: 55px;
+margin: 70px 70px 25px 70px; 
+
+}
+
+.background_button{
+display: flex;
+justify-content: center;
+width: 272px;
+height: 78px;
+background-color: #000000;
+margin: 0px 282px 70px 70px; 
+}
+
+.font_button {
+  display: flex;
+  align-items: center;
+  color: #F8F200;
+  font-size: 24px;
+}
+
+
+
+
+/* страница 2 */
+.group_2{
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  align-items: center;
+  width: 1920px;
+  height: 777px;
+  background-color: white;
+}
+.group2_text_1{
+  display: flex;
+  width: 966px;
+  height:63px;
+  justify-content: flex-start;
+  
+}
+
+.group2_text_2{
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  width: 925px;
+  height: 125px;
   
   
 }
 
-.background{
-  
+.text1_gr2{
+font-size: 62px ;
+
 }
 
-.group_banner{
+.text2_gr2{
+  font-size: 18px;
+}
+
+.in_group2{
   display: flex;
+  justify-content: flex-start;
+  padding-bottom: 28px;
 }
