--- a/Kotohin/Desktop HTML/Website.css
+++ b/Kotohin/Desktop HTML/Website.css
@@ -173,8 +173,6 @@ margin: 0px 282px 70px 70px;
   
 }
 .group_3{
-display: flex;
-flex-flow: column;
 width: 1920px;
 height: 884px; ;
 background-color: #000000;
@@ -205,16 +203,15 @@ background-color: #000000;
 }
 
 .group1_in_group3{
-  margin: 15px 648px 98px 320px;
+  margin: 15px 648px 0px 320px;
   gap: 32px;
 }
 
-.registrations{
+.registation{
   display: flex;
   flex-flow: column;
   width: 460px;
   height: 383px;
-  margin: 98px;
   row-gap: 35px;
   color: white;
 }
@@ -228,7 +225,8 @@ background-color: #000000;
 .whats_your_name{
   width: 131px;
   height: 21px;
-  padding-bottom: 13px;
+
+  
 
 }
 
@@ -236,6 +234,7 @@ background-color: #000000;
   width: 460px;
   height: 35px;
   border-bottom: 0.5px solid #C4C4C4;
+  
 }
 
 .whats_your_mail{
@@ -254,16 +253,18 @@ background-color: #000000;
 }
 
 .screenshot_button{
+  
   width: 186px;
   height: 42px;
+  gap: 7px;
 
 }
 
 .pint_screenshot{
   display: flex;
   align-items: center;
-  width: 486px;
-  height: 21;
+  width: 186px;
+  height: 21px;
   border-bottom: 0.5px solid #C4C4C4;
 }
 
@@ -291,9 +292,38 @@ background-color: #000000;
 
 .group_img_in_group3{
   display: flex;
-  background-image: url(../IMAGES\Group246.png);
   width: 788px;
   height: 456px;
   gap: 32px
 }
 
+.img_xbox{
+  width: 296px; 
+  height: 351px;
+}
+
+.img_playstation{
+  width: 296px;
+  height: 351px;
+}
+
+.background_img_in_group_ing{
+  width: 788px;
+  height: 456px;
+}
+
+.images_consle{
+  display: flex;
+  position: absolute;
+  gap: 32px;
+  margin: 24px 0px 80px 164px;
+}
+.group_images_and_registation{
+  width:1280px ;
+  height: 456px;
+  display: flex;
+  align-items: end;
+  gap: 32px;
+  margin: 25px 0px 70px 320px;
+
+}
