--- a/Kotohin/Desktop HTML/Website.css
+++ b/Kotohin/Desktop HTML/Website.css
@@ -347,7 +347,7 @@ background-color: #000000;
 
 .group_4{
   display: flex;
-  flex-flow: column wrap;
+  flex-wrap: wrap;
   width:1920px ;
   height: 676px;
   background-color: #F8F200;
@@ -368,10 +368,13 @@ background-color: #000000;
 
 .logo_group_in_group4{
   display: flex;
+  justify-content: center;
+  align-items: center;
   width:540px;
   height: 80px;
+  margin: 0px 42px 0px 42px ;
   gap: 25px;
-  margin: 26px 42px 70px 42px;
+  
 }
 
 .img_cross{
@@ -382,6 +385,7 @@ background-color: #000000;
 .group_1_in_group4{
   display: flex;
   flex-direction: column;
+  
   width: 624px ;
   height: 526px;
 }
@@ -402,7 +406,9 @@ background-color: #000000;
 
 .text_group1{
   display: flex;
-  row-gap: 15px;
+  flex-direction: column;
+  gap: 10px;
+  row-gap: 15px ;
   width: 390px;
   height: 126px;
 
