--- a/Kotohin/Desktop HTML/Website.css
+++ b/Kotohin/Desktop HTML/Website.css
@@ -372,7 +372,7 @@ background-color: #000000;
   align-items: center;
   width:540px;
   height: 80px;
-  margin: 0px 42px 0px 42px ;
+  margin: 0px 42px 70px 42px ;
   gap: 25px;
   
 }
@@ -405,7 +405,7 @@ background-color: #000000;
 
 .text_group1{
   display: flex;
-  flex-direction: column;
+  flex-direction: column; 
   gap: 10px;
   row-gap: 15px ;
   width: 390px;
@@ -474,6 +474,40 @@ background-color: #000000;
 .ing_group_and_group1_in_group4{
   display: flex;
   gap: 32px;
-  margin: 70px 320px  70px 320px;
+  margin: 0px 320px  0px 320px;
 }
 
+.group_5{
+  display: flex;
+  width: 1920px;
+  height: 717px;
+  
+
+}
+
+.group1_in_group5{
+  display:flex;
+  flex-flow: column;
+  width: 976px;
+  height: 717px;
+  background-color: #000000;
+}
+
+.text_promo{
+  display: flex;
+  width: 224px;
+  height: 28xp;
+  font-size: 28px;
+  color: var(--Color-blu);
+}
+
+.buy_game{
+display: flex;
+color: white;
+font-size: 62px;
+width: 624px;
+height: 126px;
+}
+.general_group{
+
+}
